[gd_scene load_steps=2 format=3 uid="uid://h3kubo2r2qws"]

[ext_resource type="Script" uid="uid://bpprlcd3kfv3k" path="res://ui/debug_menu.gd" id="1_cx8uo"]

[node name="Debug" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 249.0
offset_bottom = 365.0
script = ExtResource("1_cx8uo")

[node name="Sub Menu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 122.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Sub Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Sub Menu/VBoxContainer"]
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Sub Menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Sub Menu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Sub Menu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Sub Menu2" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 122.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Sub Menu2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Sub Menu2/VBoxContainer"]
layout_mode = 2
text = "2"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Sub Menu2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Sub Menu2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Sub Menu2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Basic Debug" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 116.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Basic Debug"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Basic Debug/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Debug Menu"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Basic Debug/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Pause" type="Button" parent="Basic Debug/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Pause"

[node name="Save" type="Button" parent="Basic Debug/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Save"

[node name="HBoxContainer" type="HBoxContainer" parent="Basic Debug/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Button" type="Button" parent="Basic Debug/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Submenu1"

[node name="Button2" type="Button" parent="Basic Debug/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Submenu2"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Basic Debug/VBoxContainer/HBoxContainer2/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Basic Debug/VBoxContainer/HBoxContainer2/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Basic Debug/VBoxContainer/HBoxContainer/Button" to="." method="_on_bid_pressed"]
[connection signal="pressed" from="Basic Debug/VBoxContainer/HBoxContainer/Button2" to="." method="_on_knife_pressed"]
